[package]
name = "blockchain_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
rust-crypto = "^0.2"
bincode = "1.3.3"
anyhow = "1.0"
sled = "0.34.7"
log = "0.4.21"
# env_logger = "0.10.0"
clap = "4.5.2"
# bitcoincash-addr = "0.5.2"
rand = "0.8.5"
# merkle-cbt = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"